# iaptoolkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: package.yml  publish.yml
src/iaptoolkit/: __init__.py  constants.py  exceptions.py  headers.py
src/iaptoolkit/tokens/: base.py  service_account.py  structs.py  token_datastore.py
src/iaptoolkit/tokens/oauth2/: __init__.py  datastore_oauth2.py
src/iaptoolkit/tokens/oidc/: __init__.py  datastore_oidc.py  gsa.py
src/iaptoolkit/utils/: flask.py  quart.py  urls.py  verify.py
src/tests/test_headers/: test_sanitize.py
src/tests/test_tokens/service_account/: test_get_stored_service_account_token.py
src/tests/test_utils/urls/: test_is_url_safe.py
