[tool.poetry]
name = "iaptoolkit"
version = "0.5.0"
description = "Library of common utils for interacting with Identity-Aware Proxies"
authors = ["Rob Voigt <code@ravoigt.com>"]
readme = "README.md"
homepage = "https://github.com/RAVoigt/iaptoolkit"
repository = "https://github.com/RAVoigt/iaptoolkit"

[build-system]
requires = ["poetry-core>=1.0.0"] # Poetry 1.x style; not PEP 621
build-backend = "poetry.core.masonry.api"

# ================================
# Tools etc.
[tool.black]
line-length = 110
target-version = ['py311']
include = '\.pyi?$'

# ================================
# Dependencies
[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
requests = "^2.34.2"
toml = "^0.10.2"

kvcommon = {extras = ["opentelemetry"], version = "^0.4.13"}
otel-extensions = "^1.1.0"

google-auth = "^2.55.0"
google-cloud-iam = "^2.23.0"

[tool.poetry.group.dev.dependencies]
black = "*"
ipdb = "*"
ipython = "*"
mock = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-socket = "*"
pyfakefs = "^5.3.2"
